--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/partytown": "^1.0.3",
     "@astrojs/tailwind": "^3.0.0",
     "astro": "^2.0.2",
     "tailwindcss": "^3.2.4"
