--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/partytown": "^1.0.3",
     "@astrojs/tailwind": "^3.0.0",
     "astro": "^2.0.2",
+    "gsap": "^3.12.2",
     "tailwindcss": "^3.2.4"
   }
 }
