--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro": "^4.9.2",
     "gsap": "^3.12.2",
     "tailwindcss": "^3.2.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
