--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.4.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.9.2",
     "gsap": "^3.12.2",
